Set up for manual MXFP8 matrix multiplies

--- a/blackwell/Makefile
+++ b/blackwell/Makefile
@@ -1,5 +1,6 @@
 # Source files
-SRC := 00-sanity-check.cu
+# SRC := 00-sanity-check.cu
+SRC := 01-mxfp8-mma.cu
 
 # Compiler configuration
 NVCC := nvcc
