Set up using plain FP8 matmul

--- a/blackwell/Makefile
+++ b/blackwell/Makefile
@@ -1,7 +1,8 @@
 # Source files
 # SRC := 00-sanity-check.cu
 # SRC := 01-raw-fp8-mm.cu
-SRC := 02-fp8-mm.cu
+# SRC := 02-fp8-mm.cu
+SRC := 03-mxfp8-mm.cu
 
 # Compiler configuration
 NVCC := nvcc
