--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "ThunderKittens"]
 	path = ThunderKittens
-	url = https://github.com/HazyResearch/ThunderKittens.git
+	url = git@github.com:Anysphere/ThunderKittens.git
