Add 2D int32 ldst tests

--- a/blackwell/Makefile
+++ b/blackwell/Makefile
@@ -3,8 +3,9 @@
 # SRC := 01-raw-fp8-mm.cu
 # SRC := 02-fp8-mm.cu
 # SRC := 03-mxfp8-mm.cu
-SRC := 04-tm-ldst-1d-int32.cu
+# SRC := 04-tm-ldst-1d-int32.cu
 # SRC := 05-tm-alloc.cu
+SRC := 06-tm-ldst-2d-int32.cu
 
 # Compiler configuration
 NVCC := nvcc
