--- a/blackwell/Makefile
+++ b/blackwell/Makefile
@@ -13,7 +13,8 @@
 # SRC := 11-fp8-mma-wg-ablation.cu
 # SRC := 12-fp8-mma-N-ablation.cu
 # SRC := 13-fp8-mma-M-ablation.cu
-SRC := 14-fp8-mma-M-ablation-2.cu
+# SRC := 14-fp8-mma-M-ablation-2.cu
+SRC := 15-fp8-mma-M-ablation-3.cu
 
 # Compiler configuration
 NVCC := nvcc
