--- a/blackwell/Makefile
+++ b/blackwell/Makefile
@@ -16,7 +16,8 @@
 # SRC := 14-fp8-mma-M-ablation-2.cu
 # SRC := 15-fp8-mma-M-ablation-3.cu
 # SRC := 16-mxfp8-mma-polished.cu
-SRC := 17-mxfp8-mma-M256.cu
+# SRC := 17-mxfp8-mma-M256.cu
+SRC := 18-mxfp8-quantize.cu
 
 # Compiler configuration
 NVCC := nvcc
