--- a/blackwell/Makefile
+++ b/blackwell/Makefile
@@ -18,8 +18,8 @@
 # SRC := 16-mxfp8-mma-polished.cu
 # SRC := 17-mxfp8-mma-M256.cu
 # SRC := 18-mxfp8-quantize.cu
-# SRC := 19-smem-swizzle.cu
-SRC := 20-mxfp8-quantize-opt.cu
+# SRC := 19-smem-swizzle-8b.cu
+SRC := 20-smem-swizzle-16b.cu
 
 # Compiler configuration
 NVCC := nvcc
