--- a/blackwell/Makefile
+++ b/blackwell/Makefile
@@ -22,7 +22,8 @@
 # SRC := 20-smem-swizzle-16b.cu
 # SRC := 21-mxfp8-quantize-opt.cu
 # SRC := 22-mxfp8-quantize-opt-2.cu
-SRC := 23-mxfp8-mma-grid-ablation.cu
+# SRC := 23-mxfp8-mma-grid-ablation.cu
+SRC := 24-mxfp8-quantize-grid-ablation.cu
 
 # Compiler configuration
 NVCC := nvcc
