Add raw binding example

--- a/blackwell/Makefile
+++ b/blackwell/Makefile
@@ -23,7 +23,8 @@
 # SRC := 21-mxfp8-quantize-opt.cu
 # SRC := 22-mxfp8-quantize-opt-2.cu
 # SRC := 23-mxfp8-mma-grid-ablation.cu
-SRC := 24-mxfp8-quantize-grid-ablation.cu
+# SRC := 24-mxfp8-quantize-grid-ablation.cu
+SRC := 27-raw-binding.cu
 
 # Compiler configuration
 NVCC := nvcc
