Add TMA no swizzle load benchmarks

--- a/blackwell/Makefile
+++ b/blackwell/Makefile
@@ -26,7 +26,8 @@
 # SRC := 24-mxfp8-quantize-grid-ablation.cu
 # SRC := 27-raw-binding.cu
 # SRC := 28-tma-load.cu
-SRC := 29-tma-store.cu
+# SRC := 29-tma-store.cu
+SRC := 30-tma-load-bandwidth.cu
 
 # Compiler configuration
 NVCC := nvcc
