Add conclusions on swizzle

--- a/blackwell/Makefile
+++ b/blackwell/Makefile
@@ -28,7 +28,9 @@
 # SRC := 28-tma-load.cu
 # SRC := 29-tma-store.cu
 # SRC := 30-tma-load-bandwidth.cu
-SRC := 31-tma-load-store-bandwidth.cu
+# SRC := 31-tma-load-store-bandwidth.cu
+# SRC := 32-tma-swiz-load.cu
+SRC := 33-tma-swiz-load-bandwidth.cu
 
 # Compiler configuration
 NVCC := nvcc
