Working optimized tranpose mxfp8 transpose quantize

--- a/blackwell/Makefile
+++ b/blackwell/Makefile
@@ -33,7 +33,8 @@
 # SRC := 33-tma-swiz-load-bandwidth.cu
 # SRC := 34-dma-bandwidth.cu
 # SRC := 35-tma-pipeline-bandwidth.cu
-SRC := 36-mxfp8-quantize-opt-3.cu
+# SRC := 36-mxfp8-quantize-opt-3.cu
+SRC := 37-mxfp8-transpose-quantize.cu
 
 # Compiler configuration
 NVCC := nvcc
