Implement 2CTA FP8 MM

--- a/blackwell/Makefile
+++ b/blackwell/Makefile
@@ -35,7 +35,8 @@
 # SRC := 35-tma-pipeline-bandwidth.cu
 # SRC := 36-mxfp8-quantize-opt-3.cu
 # SRC := 37-mxfp8-transpose-quantize.cu
-SRC := 38-mxfp8-quantize-combined.cu
+# SRC := 38-mxfp8-quantize-combined.cu
+SRC := 39-fp8-mma-2cta.cu
 
 # Compiler configuration
 NVCC := nvcc
