--- a/blackwell/Makefile
+++ b/blackwell/Makefile
@@ -36,7 +36,8 @@
 # SRC := 36-mxfp8-quantize-opt-3.cu
 # SRC := 37-mxfp8-transpose-quantize.cu
 # SRC := 38-mxfp8-quantize-combined.cu
-SRC := 39-fp8-mma-2cta.cu
+# SRC := 39-fp8-mma-2cta.cu
+SRC := 40-fp8-mma-2cta-factored.cu
 
 # Compiler configuration
 NVCC := nvcc
