Add 2CTA MXFP8 MM

--- a/blackwell/Makefile
+++ b/blackwell/Makefile
@@ -40,7 +40,8 @@
 # SRC := 40-fp8-mma-2cta-factored.cu
 # SRC := 41-fp8-mma-2cta-M256.cu
 # SRC := 42-fp8-mma-2cta-MN128.cu
-SRC := 43-fp8-mma-2cta-MNK128.cu
+# SRC := 43-fp8-mma-2cta-MNK128.cu
+SRC := 44-mxfp8-mm-2cta.cu
 
 # Compiler configuration
 NVCC := nvcc
