Add refactored 2CTA MXFP8 MMA

--- a/blackwell/Makefile
+++ b/blackwell/Makefile
@@ -42,7 +42,8 @@
 # SRC := 42-fp8-mma-2cta-MN128.cu
 # SRC := 43-fp8-mma-2cta-MNK128.cu
 # SRC := 44-mxfp8-mm-2cta.cu
-SRC := 45-mxfp8-mma-2cta.cu
+# SRC := 45-mxfp8-mma-2cta.cu
+SRC := 46-mxfp8-mma-2cta-MNK128.cu
 
 # Compiler configuration
 NVCC := nvcc
