--- a/blackwell/Makefile
+++ b/blackwell/Makefile
@@ -45,7 +45,9 @@
 # SRC := 45-mxfp8-mma-2cta.cu
 # SRC := 46-mxfp8-mma-2cta-MNK128.cu
 # SRC := 47-mxfp8-mma-2cta-MNK128-polished.cu
-SRC := 48-bf16-mha.cu
+# SRC := 48-bf16-matmul-ablation.cu
+# SRC := 49-bf16-mha-D128.cu
+SRC := 50-bf16-mha-deepseek.cu
 
 # Compiler configuration
 NVCC := nvcc
