--- a/blackwell/Makefile
+++ b/blackwell/Makefile
@@ -47,7 +47,8 @@
 # SRC := 47-mxfp8-mma-2cta-MNK128-polished.cu
 # SRC := 48-bf16-matmul-ablation.cu
 # SRC := 49-bf16-mha-D128.cu
-SRC := 50-bf16-mha-deepseek.cu
+SRC := 50-bf16-mha-opt-D128.cu
+# SRC := 51-bf16-mha-deepseek.cu
 
 # Compiler configuration
 NVCC := nvcc
