Initial working version

--- a/blackwell/Makefile
+++ b/blackwell/Makefile
@@ -46,9 +46,9 @@
 # SRC := 46-mxfp8-mma-2cta-MNK128.cu
 # SRC := 47-mxfp8-mma-2cta-MNK128-polished.cu
 # SRC := 48-bf16-matmul-shape-ablation.cu
-SRC := 49-bf16-matmul-launcher-ablation.cu
+# SRC := 49-bf16-matmul-launcher-ablation.cu
 # SRC := 50-bf16-mha-D128.cu
-# SRC := 51-bf16-mha-opt-D128.cu
+SRC := 51-bf16-mha-opt-D128.cu
 # SRC := 52-bf16-mha-deepseek.cu
 
 # Compiler configuration
