--- a/blackwell/Makefile
+++ b/blackwell/Makefile
@@ -48,9 +48,9 @@
 # SRC := 48-bf16-matmul-shape-ablation.cu
 # SRC := 49-bf16-matmul-launcher-ablation.cu
 # SRC := 50-bf16-mha-D128.cu
-# SRC := 51-bf16-mha-opt-D128.cu
+SRC := 51-bf16-mha-opt-D128.cu
 # SRC := 52-bf16-mha-deepseek.cu
-SRC := 53-microbenchmarks.cu
+# SRC := 53-microbenchmarks.cu
 
 # Compiler configuration
 NVCC := nvcc
