Make all2all fully utilize TKParallelTensor

--- a/blackwell/Makefile
+++ b/blackwell/Makefile
@@ -55,10 +55,10 @@
 # SRC := 57-tcgen05-bf16-mma-smallM.cu
 # SRC := 58-tensor-ipc.cu
 # SRC := 59-tensor-ipc-polished.cu
-# SRC := 60-all2all.cu
+SRC := 60-all2all.cu
 # SRC := 61-vmm-ipc.cu
 # SRC := 62-vmm-ipc-polished.cu
-SRC := 63-parallel-tensor.cu
+# SRC := 63-parallel-tensor.cu
 
 # Binaries
 NVCC := nvcc
