Add further all reduce experiment

--- a/blackwell/Makefile
+++ b/blackwell/Makefile
@@ -62,7 +62,8 @@
 # SRC := 64-multigpu-sync.cu
 # SRC := 65-multimem-all-reduce.cu
 # SRC := 67-tma-vs-warp-1.cu
-SRC := 68-tma-vs-warp-2.cu
+# SRC := 68-tma-vs-warp-2.cu
+SRC := 69-multimem-all-reduce-tma.cu
 
 # Binaries
 NVCC := nvcc
@@ -115,16 +116,16 @@ NVCCFLAGS += -diag-suppress 3189
 # RUN_CMD := python3 $(basename $(SRC)).py
 
 # 3. PyTorch binding configuration
-NVCCFLAGS += -shared -fPIC
-NVCCFLAGS += -DTORCH_EXTENSION_NAME=_C # replicate setup.py behavior
-OUT := _C$(shell python3 -c "import sysconfig; print(sysconfig.get_config_var('EXT_SUFFIX'))")
-RUN_CMD := python3 $(basename $(SRC)).py
-
-# 4. PyTorch + Torchrun binding configuration
 # NVCCFLAGS += -shared -fPIC
 # NVCCFLAGS += -DTORCH_EXTENSION_NAME=_C # replicate setup.py behavior
 # OUT := _C$(shell python3 -c "import sysconfig; print(sysconfig.get_config_var('EXT_SUFFIX'))")
-# RUN_CMD := OMP_NUM_THREADS=1 torchrun --nproc_per_node=8 $(basename $(SRC)).py
+# RUN_CMD := python3 $(basename $(SRC)).py
+
+# 4. PyTorch + Torchrun binding configuration
+NVCCFLAGS += -shared -fPIC
+NVCCFLAGS += -DTORCH_EXTENSION_NAME=_C # replicate setup.py behavior
+OUT := _C$(shell python3 -c "import sysconfig; print(sysconfig.get_config_var('EXT_SUFFIX'))")
+RUN_CMD := OMP_NUM_THREADS=1 torchrun --nproc_per_node=8 $(basename $(SRC)).py
 
 # 5. MPI configuration
 # NVCCFLAGS += -ccbin ${MPICC}
